# QuteeAI

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker.sh  main.py  requirements.txt  ssh.sh  txt.txt
hardware/: README.md
hardware/STL/: Case_no_tft v2.stl  Case_tft v19.stl  Case_tft.stl  body_base v17.stl  body_bottom v24.stl  body_bottom.stl  case_bottom v3.stl  doubleU v9.stl  esp32-S3-tft-reverse.stl  foot v20.stl  horn v1.stl  horn_spacer v2.stl  imu.stl  leg.stl  new_spacer.stl  side v8.stl  spacer_for_tft v39.stl  spacer_no_tft v15.stl  tibia v21.stl
pysoftware/: Readme.md  controls.py  deploy-waitress.sh  main.py
pysoftware/simpleexamples/: imu_data_msg.py  motormove.py  sim.py
software/: .sdkconfig.deffaults.swp  CMakeLists.txt  README.md  Readme.md  qutee.urdf  sdkconfig.defaults
software/arduinoware/: solution_flash.ino
software/components/Adafruit-GFX-Library/: Adafruit_GrayOLED.h  CMakeLists.txt
software/components/Adafruit_BusIO/: CMakeLists.txt
software/components/Adafruit_Sensor/: .gitignore
software/components/Dynamixel2Arduino-7f4400a867576e1eaf50c719fdbea7a9a5ab2b47/examples/basic/copy_eeprom_x/: copy_eeprom_x.ino
software/components/Dynamixel2Arduino-7f4400a867576e1eaf50c719fdbea7a9a5ab2b47/src/dxl_c/: protocol.h
software/components/Dynamixel2Arduino-7f4400a867576e1eaf50c719fdbea7a9a5ab2b47/src/utility/: master.cpp
software/components/Dynamixel2Arduino/examples/advanced/fast_sync_read/: fast_sync_read.ino
software/components/Dynamixel2Arduino/examples/advanced/operating_mode_advanced/: operating_mode_advanced.ino
software/components/Dynamixel2Arduino/examples/basic/baudrate/: baudrate.ino
software/components/Dynamixel2Arduino/src/utility/: master.h
software/components/arduino-esp32/: CMakeLists.txt
software/components/arduino-esp32-720be7599f23ccf26a09bb371af833b44cf4627f/cores/esp32/: Esp.cpp  IPAddress.cpp  IPv6Address.h  MD5Builder.cpp
software/components/arduino-esp32-720be7599f23ccf26a09bb371af833b44cf4627f/libraries/USB/examples/Gamepad/: Gamepad.ino
software/components/arduino-esp32-720be7599f23ccf26a09bb371af833b44cf4627f/libraries/USB/examples/HIDVendor/: HIDVendor.ino
software/components/arduino-esp32-720be7599f23ccf26a09bb371af833b44cf4627f/libraries/USB/examples/KeyboardAndMouseControl/: KeyboardAndMouseControl.ino
software/components/arduino-esp32-720be7599f23ccf26a09bb371af833b44cf4627f/libraries/USB/examples/SystemControl/: SystemControl.ino
software/components/arduino-esp32-720be7599f23ccf26a09bb371af833b44cf4627f/libraries/USB/examples/USBSerial/: USBSerial.ino
software/components/arduino-esp32-720be7599f23ccf26a09bb371af833b44cf4627f/libraries/USB/examples/USBVendor/: USBVendor.ino
software/components/arduino-esp32-720be7599f23ccf26a09bb371af833b44cf4627f/tools/: espota.py
software/components/arduino-esp32-720be7599f23ccf26a09bb371af833b44cf4627f/variants/d1_mini32/: pins_arduino.h
software/components/arduino-esp32-720be7599f23ccf26a09bb371af833b44cf4627f/variants/d32/: pins_arduino.h
software/components/arduino-esp32-720be7599f23ccf26a09bb371af833b44cf4627f/variants/dfrobot_firebeetle2_esp32e/: pins_arduino.h
software/components/arduino-esp32/cores/esp32/: IPAddress.h  IPv6Address.cpp  MD5Builder.h  Tone.cpp
software/components/arduino-esp32/libraries/USB/examples/CompositeDevice/: CompositeDevice.ino
software/components/arduino-esp32/libraries/USB/examples/ConsumerControl/: ConsumerControl.ino
software/components/arduino-esp32/libraries/USB/examples/CustomHIDDevice/: CustomHIDDevice.ino
software/components/arduino-esp32/libraries/USB/examples/FirmwareMSC/: FirmwareMSC.ino
software/components/arduino-esp32/libraries/USB/examples/Keyboard/KeyboardLogout/: KeyboardLogout.ino
software/components/arduino-esp32/libraries/USB/examples/USBMSC/: USBMSC.ino
software/components/arduino-esp32/variants/d32_pro/: pins_arduino.h
software/components/micro_ros_espidf_component-895a1f8858481d0b39a0d76d5ee8ab4db932293f/examples/addtwoints_server/: CMakeLists.txt
software/components/micro_ros_espidf_component-895a1f8858481d0b39a0d76d5ee8ab4db932293f/examples/handle_static_types/: CMakeLists.txt
software/components/micro_ros_espidf_component-895a1f8858481d0b39a0d76d5ee8ab4db932293f/examples/int32_publisher/: CMakeLists.txt
software/components/micro_ros_espidf_component-895a1f8858481d0b39a0d76d5ee8ab4db932293f/examples/int32_sub_pub/: CMakeLists.txt
software/components/micro_ros_espidf_component-895a1f8858481d0b39a0d76d5ee8ab4db932293f/extra_packages/: .gitignore
software/components/micro_ros_espidf_component/docker/: Dockerfile
software/components/micro_ros_espidf_component/examples/multithread_publisher/: CMakeLists.txt
software/components/micro_ros_espidf_component/examples/ping_pong/: CMakeLists.txt
software/main/: .gitignore  CMakeLists.txt  Kconfig.projbuild  NNQuteeController.hpp  Qutee.cpp  Qutee.hpp  QuteeController.hpp  QuteeDxlPortHandler.cpp  QuteeDxlPortHandler.hpp  idf_component.yml  libquteemsg.mk  main.cpp
software/main/src/qutee_msg/: CMakeLists.txt  package.xml
software/main/src/qutee_msg/msg/: RolloutRes.msg  Weights.msg
software/pysoftware/: Caddyfile  deploy-caddy.sh  gen-waitress.sh  install-caddy.sh  run.sh
software/pysoftware/simpleexamples/: imu_data_msg.py
software/urdf/: practice.urdf  qutee.urdf
team docs/: CODE_OF_CONDUCT.md
team docs/client minutes/february/: 24.02.05.md  24.02.12.md  24.02.19.md
team docs/client minutes/january/: 23.01.23.md  23.01.30.md  24.01.23.md  24.01.30.md
team docs/client minutes/march/: 24.03.04.md  24.03.18 .md  24.04.09  .md
team docs/contributions/: Contribution.xlsx  sprint_1.xlsx  sprint_2.xlsx
team docs/guides/: template.urdf  urdf.md
team docs/guides/urdf/: template.urdf  urdf.md
team docs/guides/urdf/practice_resources/: practice_tf_tree.gv
team docs/project overview/: project brief.md  qutee_robot.pptx
team docs/scrum minutes/february/: 24.02.05.md  template.md
usb/: CMakeLists.txt
usb/main/: CMakeLists.txt  usb.c  usb.cpp
wifi/: CMakeLists.txt
wifi/main/: wifi.c
(+14 files in other folders)
